--- a/utils/namumark/test.html
+++ b/utils/namumark/test.html
@@ -281,15 +281,20 @@ __이런건__ [plum] 처리되는듯
   },
   {
     "type": "bold",
-    "content": "굵음"
-  },
-  {
-    "type": "text",
-    "content": ", 그리고 "
-  },
-  {
-    "type": "bold_italic",
-    "content": "혼합"
+    "other": [
+      {
+        "type": "text",
+        "content": "굵음"
+      },
+      {
+        "type": "bold",
+        "content": ", 그리고 ''"
+      },
+      {
+        "type": "text",
+        "content": "혼합''"
+      }
+    ]
   },
   {
     "type": "text",
@@ -368,7 +373,7 @@ __이런건__ [plum] 처리되는듯
     <div class="section">
         <h2>3. HTML 렌더링 결과</h2>
         <div class="result">
-            <br />안녕하세요! 이것은 <b>테스트</b> 문서입니다.<br /><br /><a href="/w/FrontPage" class="wiki-link">FrontPage</a>를 방문해보세요.<br /><a href="/w/%EB%AC%B8%EC%84%9C" class="wiki-link">표시 텍스트</a>도 가능합니다.<br /><br />그리고 제 대가리는 점점 터져갑니다<br /><br />일반 텍스트와 <a href="/w/%EB%A7%81%ED%81%AC" class="wiki-link">링크</a>가 섞여 있습니다.<br /><br /><a href="https://hanbit.cc/" class="wiki-external-link" target="_blank" rel="noopener noreferrer">https://hanbit.cc/</a>와 같은 <a href="https://daol.cc" class="wiki-external-link" target="_blank" rel="noopener noreferrer">외부 링크</a>도 지원합니다.<br /><br /><i><a href="/w/%EC%9D%B4%EB%9F%B0%EA%B2%83" class="wiki-link">이런것</a>도 <a href="/w/%E3%85%81%E3%84%B4%E3%85%87%E3%84%B9" class="wiki-link">처리</a>가 잘 되나?</i><br /><b><a href="/w/%EC%9D%B4%EA%B2%83" class="wiki-link">이것</a>도 <a href="/w/%E3%85%81%E3%84%B4%E3%85%87%E3%84%B9" class="wiki-link">처리</a>가 잘 되나?</b><br /><br /><u>이런건</u> <a class="wiki-external-link" href="https://www.youtube.com/watch?v=s0T83BIH0m0" target="_blank">너는 얻다 달걀 부활절</a> 처리되는듯<br /><br /><i>기울임</i>과 <b>굵음</b>, 그리고 <b><i>혼합</i></b>까지 테스트합니다.<br /><br /><b>굵은 글씨 안에 <i>기울임</i>이 있어요</b><br /><br />&#039;&#039;기울임 안에 <b>굵음</b>도 가능해요&#039;&#039;<br /><br /><b>바깥 굵음 <i>중간 기울임</i> 다시 굵음</b><br />
+            <br />안녕하세요! 이것은 <b>테스트</b> 문서입니다.<br /><br /><a href="/w/FrontPage" class="wiki-link">FrontPage</a>를 방문해보세요.<br /><a href="/w/%EB%AC%B8%EC%84%9C" class="wiki-link">표시 텍스트</a>도 가능합니다.<br /><br />그리고 제 대가리는 점점 터져갑니다<br /><br />일반 텍스트와 <a href="/w/%EB%A7%81%ED%81%AC" class="wiki-link">링크</a>가 섞여 있습니다.<br /><br /><a href="https://hanbit.cc/" class="wiki-external-link" target="_blank" rel="noopener noreferrer">https://hanbit.cc/</a>와 같은 <a href="https://daol.cc" class="wiki-external-link" target="_blank" rel="noopener noreferrer">외부 링크</a>도 지원합니다.<br /><br /><i><a href="/w/%EC%9D%B4%EB%9F%B0%EA%B2%83" class="wiki-link">이런것</a>도 <a href="/w/%E3%85%81%E3%84%B4%E3%85%87%E3%84%B9" class="wiki-link">처리</a>가 잘 되나?</i><br /><b><a href="/w/%EC%9D%B4%EA%B2%83" class="wiki-link">이것</a>도 <a href="/w/%E3%85%81%E3%84%B4%E3%85%87%E3%84%B9" class="wiki-link">처리</a>가 잘 되나?</b><br /><br /><u>이런건</u> <a class="wiki-external-link" href="https://www.youtube.com/watch?v=s0T83BIH0m0" target="_blank">너는 얻다 달걀 부활절</a> 처리되는듯<br /><br /><i>기울임</i>과 <b>굵음<b>, 그리고 &#039;&#039;</b>혼합&#039;&#039;</b>까지 테스트합니다.<br /><br /><b>굵은 글씨 안에 <i>기울임</i>이 있어요</b><br /><br />&#039;&#039;기울임 안에 <b>굵음</b>도 가능해요&#039;&#039;<br /><br /><b>바깥 굵음 <i>중간 기울임</i> 다시 굵음</b><br />
         </div>
     </div>
 </body>
